--- a/ios/Tusharemobile/Info.plist
+++ b/ios/Tusharemobile/Info.plist
@@ -36,10 +36,10 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UIAppFonts</key>
 	<array>
-		<string/>
+		<string></string>
 		<string>AntDesign.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>EvilIcons.ttf</string>
