--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "color": "^3.1.3",
+    "enzyme": "^3.11.0",
     "formik": "^2.2.6",
+    "immer": "^9.0.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-mmkv-storage": "^0.5.8",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -33,6 +41,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/color": "^3.0.1",
+    "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.20",
     "@types/react-native": "^0.64.0",
     "@types/react-native-vector-icons": "^6.4.6",
@@ -42,7 +51,10 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-native-flipper": "^0.88.0",
     "react-test-renderer": "17.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-flipper": "^1.4.2",
     "typescript": "^3.8.3"
   },
   "resolutions": {
