--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,7 +137,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.tushare_mobile"
+        applicationId "com.filter_coffee"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
