--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "immer": "^9.0.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-bootsplash": "^3.2.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-mmkv-storage": "^0.5.8",
     "react-native-paper": "^4.8.1",
