--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.64.1",
     "react-native-bootsplash": "^3.2.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-mmkv-storage": "^0.5.8",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.1.0",
