--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@types/qs": "^6.9.6",
     "axios": "^0.21.1",
     "color": "^3.1.3",
     "enzyme": "^3.11.0",
     "formik": "^2.2.6",
     "immer": "^9.0.2",
+    "qs": "^6.10.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-bootsplash": "^3.2.3",
