--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-bootsplash": "^3.2.3",
+    "react-native-device-info": "^8.1.3",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
