--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/qs": "^6.9.6",
     "axios": "^0.21.1",
     "color": "^3.1.3",
+    "dayjs": "^1.10.5",
     "enzyme": "^3.11.0",
     "formik": "^2.2.6",
     "immer": "^9.0.2",
